tdf#137713 don't crash if there is no m_xEditView

Change-Id: I8b35459c7d5a704d9e2c0e2bfa4fce1aef152846
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104757
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>